# stargate

./: CMakeLists.txt
.cursor/rules/: class-layout.mdc  naming.mdc  static-library-name.mdc
common/: CMakeLists.txt  SharedString.cpp  SharedString.h  SortedOrderedMap.h  StringManager.cpp  StringManager.h  StringRef.h
nl/: CMakeLists.txt  Design.cpp  Design.h  Instance.cpp  Instance.h  Library.cpp  Library.h  ObjectID.h  SGCDB.cpp  SGCDB.h
tools/: CMakeLists.txt
tools/dark/: CMakeLists.txt
tools/stargate/: CMakeLists.txt  Stargate.cpp
